Update Git commands and fix footer link

--- a/html/git.html
+++ b/html/git.html
@@ -14,19 +14,24 @@
       <div class="card">
          <p class="subtitle">Git</p>
           <ul>
-            <li>ls - расшифровывается как "List files in the directory", что переводится как "перечислить все файлы в папке" или "вывести на экран список файлов в папке".</li>
-            <li>cd - расшифровывается как "Change directory", что переводится как "сменить папку" или "перейти в другую папку".</li>
-            <li>pwd - расшифровывается как "Present working directory", что переводится как "текущая рабочая директория". То есть команда pwd показывает, в какой сейчас папке мы находимся. </li>
-            <li>mkdir - расшифровывается как "Make directory", что переводится как "создать папку".</li>
-            <li>mv - расфшифровывается как"Move", что переводится как "переместить", "передвинуть". С помощью нее можно переместить, переименовать или удалить файл/</li>
-         </ul>
+            <li>git branch — отображает список локальных веток.</li>
+            <li>git branch -a — показывает все ветки, включая удалённые.</li>
+            <li>git branch [name] — создаёт новую ветку с указанным именем.</li>
+            <li>git checkout [branch] — переключает на указанную ветку.</li>
+            <li>git log — выводит список коммитов от новых к старым с хешем, автором, датой и сообщением.</li>
+             <li>git blame [file] — показывает, кто и когда вносил изменения в каждую строку файла. </li>
+             <li>git status — показывает текущее состояние репозитория</li>
+             <li>git add [file] — добавляет конкретный файл в индекс (область подготовки к коммиту). </li>
+             <li>git commit -m "сообщение" — создаёт коммит с описанием изменений. Сообщение должно кратко и ясно отражать суть внесённых правок.</li>
+             <li>git commit --amend — редактирует последний коммит (например, чтобы исправить сообщение или добавить в него файлы). </li>
+          </ul>
       </div>
       <!--footer-->
       <footer class="animated fadeIn">
          <p class="location" align="center">
-            <a href="mac.html">Вернуся на главную</a>
+            <a href="index.html">Вернуться на главную</a>
          </p>
-         &copy; 202 4. SkyPro
+         &copy; 2024. SkyPro
       </footer>
    </body>
 </html>
