Fix charset and reorganize git command list
Updated meta charset from 'utf-8' to 'UTF-8' and rearranged git commands for clarity.

--- a/html/git.html
+++ b/html/git.html
@@ -6,7 +6,7 @@
       <link rel="stylesheet" type="text/css" href="../css/font-awesome.css">
       <link rel="shortcut icon" href="../img/fav.ico" type="image/x-icon">
       <link href="https://fonts.googleapis.com/css?family=Montserrat:700" rel="stylesheet">
-      <meta charset="utf-8">
+      <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
    </head>
    <body>
@@ -19,12 +19,12 @@
             <li>git branch [name] — создаёт новую ветку с указанным именем.</li>
             <li>git checkout [branch] — переключает на указанную ветку.</li>
             <li>git log — выводит список коммитов от новых к старым с хешем, автором, датой и сообщением.</li>
-             <li>git blame [file] — показывает, кто и когда вносил изменения в каждую строку файла. </li>
-             <li>git status — показывает текущее состояние репозитория</li>
-             <li>git add [file] — добавляет конкретный файл в индекс (область подготовки к коммиту). </li>
-             <li>git commit -m "сообщение" — создаёт коммит с описанием изменений. Сообщение должно кратко и ясно отражать суть внесённых правок.</li>
-             <li>git commit --amend — редактирует последний коммит (например, чтобы исправить сообщение или добавить в него файлы). </li>
-          </ul>
+            <li>git blame [file] — показывает, кто и когда вносил изменения в каждую строку файла.</li>
+            <li>git status — показывает текущее состояние репозитория</li>
+            <li>git add [file] — добавляет конкретный файл в индекс (область подготовки к коммиту).</li>
+            <li>git commit -m "сообщение" — создаёт коммит с описанием изменений. Сообщение должно кратко и ясно отражать суть внесённых правок.</li>
+            <li>git commit --amend — редактирует последний коммит (например, чтобы исправить сообщение или добавить в него файлы).</li>
+         </ul>
       </div>
       <!--footer-->
       <footer class="animated fadeIn">
